[package]
name = "smelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
